--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<p align="center"><a href="./屏蔽字.docx" download="点击下载">点击下载</a><br/></p>
+<p align="center"><a href="/屏蔽字.docx" download="屏蔽字">点击下载</a><br/></p>
 巴尔的摩
 驾驶证
 民警
