--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <meta charset="utf-8">
 <title>碧蓝航线屏蔽字</title>
 </head>
-
+<style>
+body
+{
+	background-color: #D6EAF8
+}
+body{font-size: 20px}
+body{color: #1D8348}
+</style>
 <body>
 <p align="center"><a href="/屏蔽字.docx" download="屏蔽字">点击下载</a><br/></p>
 巴尔的摩
