--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ tank
 暗杀
 屠夫
 屠城
-64六四
+64六四（空格屏蔽）
 狗肉
 精日
 分裂
@@ -519,6 +519,7 @@ tank
 圣战兴奋剂
 兴奋剂
 去氧麻黄碱
+大麻
 甲基安
 甲喹酮
 快感
@@ -610,13 +611,12 @@ K他命
 普拉西泮
 代开发
 代开
-吡咯戊酮
 替马西泮
 四氢西泮
 荨麻疹
 蒂巴因
 羟考酮
-海洛因
+海洛因（空格全屏蔽）
 大烟
 罂粟
 吗啡
@@ -632,10 +632,12 @@ K他命
 丙己君
 曲马多
 扎来普隆
+南京大屠杀
 克隆
 九成
 乌鲁木齐
 西藏
+惨案
 蒙古
 北京（禁言）
 新疆
@@ -672,14 +674,21 @@ Gan
 服务
 改革
 舆论导向
+乙氧基乙烷
 杜鲁门
 铁幕
-导弹危机
+导弹
 危机
 联合国
 宪章
 侵犯
 大东亚共荣
+东亚共荣
+山本五十六
+山本
+共荣
+天尊
+靖国神社
 开罗
 小泽
 中途岛
@@ -894,20 +903,106 @@ Game
 粉嫩
 赌船
 被捕
+凭证
 热线
 世界通
 卫生部
 手机卡
 早泄
+机枪
+手枪
+猎枪
+霰弹枪
+散弹枪
+突击步枪
+榴弹枪
+枪林弹雨
+自动步枪
+95式自动步枪
+半自动步枪
+AR突击步枪
+卡宾枪
+巴雷特
+雷明顿
+轻机枪
+重机枪
+沙漠之鹰
+通用机枪
+微型冲锋枪
+人民解放军
+冲锋枪
+狙击枪
+阻击枪
 释迦牟尼
+王八蛋
+厕所偷
+红星
+狼人
+口交
+鬼子
+金三角
+鸦片
+走私
+乱伦
+如来佛祖
+塔利班
+美利坚
+法老王
+镰刀锤子
+本拉登
+卡扎菲
+特种部队
+拉登
+援交
+政变
+艾滋病
+热那亚
+苏联解体
+民国
+道教
+Liusi（空格屏蔽）
+五月
+五月三十五号（五月中间打一个空格也会被全屏蔽）
+混蛋
+代孕
+反社会
+反人类
+安非他命
 蟒
+乙醚
+足交
+造反
 我干点
+天主教
+金正恩
+金正日
+麻醉
+劫机
+耶和华
+美沙酮
+钓鱼岛
+Tnt
+佛教
+基督教
+伊斯兰
+林肯
+法西斯
+文化大革命
+黑鬼
+穆斯林
+冰毒
+柏林墙
 最大限度
 特殊符号：&ㄨ㊣㈡㈢㈣㈥㈧㈨㈩㎎㎏㎜
 汉语注音符号：ㄅㄆㄇㄈㄉㄊㄋㄌㄍㄎㄏㄐㄑㄒㄓㄔㄕㄖㄗㄘㄙㄚㄛㄜㄝㄞㄟㄠㄡㄢㄣㄤㄥㄦㄧㄨㄩ
 部首偏旁：凵卩阝艹彐丬隹
 注：①键盘上除了_是二次确认屏蔽字，标点符号与网络特殊符号对改名都是直接屏蔽字
-②部分政治人物的拼音也会屏蔽，除了一些特殊人物（如特朗普，拜登，勃列日涅夫，戈尔巴乔夫，叶利钦）
+②部分政治人物的拼音也会屏蔽，除了一些特殊人物（如特朗普，拜登，勃列日涅夫，戈尔巴乔夫，叶利钦））
 ③大舰队界面无法打出屏蔽字只能在主界面切换频道打出来，还是星号
+④“手榴弹枪，人民解放军，如来佛祖”没有优先屏蔽，因为手榴弹与榴弹枪都会被屏蔽，堵门，其他例子如上
+⑤所有字母不分大小写
+⑥liusi是全拼音屏蔽所以读音字都发不出去
+⑦绝大部分的政治与战争人物的英文不会被屏蔽如赫鲁晓夫华盛顿布什
+本拉登卡扎菲
 </body>
 </html>
