--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@ body{color: #1D8348}
 新冠肺炎
 发愣
 丧钟
-法轮功（与之类似的读音都会被屏蔽）
+法轮功（与之类似的读音都会被屏蔽，有一些是类似于秀才读半边的屏蔽。例如发轮、伦功、法轮攻）
 城管
 捅我
 Wg
 视网膜
 Abian
+戳你
 手雷
 双龙入洞
 天下无双
@@ -39,7 +40,7 @@ Abian
 餐饮
 人弹
 马的
-Av（分开打没）
+Av（1空格屏蔽 加两个空格或一个标点不会屏蔽）
 手榴弹
 榴弹
 原味
@@ -136,6 +137,7 @@ vr
 条子
 自杀
 J8
+J巴
 儿子 爸爸 妈妈 爷爷奶奶
 Kml
 ml
@@ -238,6 +240,7 @@ ice
 五千
 禁言
 国家领导人
+领导人
 BC
 老大
 黑社会
@@ -284,11 +287,11 @@ System
 酒吧
 弹弓
 胡建国（禁言）
-看下
 公务员
 私聊
 孤独
 五大诉求
+大诉求
 簧片
 反革命
 革命
@@ -300,7 +303,7 @@ System
 党员
 求是
 爆炸
-C ao（分开打全没）
+C ao（1空格屏蔽，加1字符或2空格不会屏蔽）
 测试
 抢械
 枪械
@@ -319,8 +322,7 @@ PP
 法
 接受
 怀念
-1981与一九八一与壹玖捌壹
-198一九八（6个字合起来）
+1981与一九八一与壹玖捌壹（这串数字不论是数字还是汉字的混合组合都会屏蔽）
 九八（98不会屏蔽）
 席（禁言）
 主席
@@ -401,7 +403,7 @@ Asshole（ass可以）
 国外
 手游（禁言）
 曹你
-604
+604（汉字与数字混合的数字也会屏蔽）
 火乍
 起义
 系（禁言）
@@ -436,7 +438,7 @@ Glock
 250
 Awp
 Tnnd
-Ur(分开打全没)
+Ur(1空格屏蔽，加1标点或2字符不会屏蔽)
 迫害
 爱因斯坦
 女仆
@@ -484,7 +486,7 @@ tank
 暗杀
 屠夫
 屠城
-64六四（空格屏蔽）
+64六四（1字符屏蔽，双空格与双字符不会屏蔽，这串数字不论是数字还是汉字的混合组合都会屏蔽）
 狗肉
 精日
 分裂
@@ -544,7 +546,7 @@ PCP
 神仙水
 氯胺酮
 4-甲基甲卡西酮
-摇头丸（分开打全没）
+摇头丸（1空格屏蔽字，加1标点或2空格不会屏蔽）
 三唑仑
 摇头玩
 三唑
@@ -892,7 +894,7 @@ Game
 信誉
 赤匪
 狼友
-病毒（分开打全没）
+病毒（1空格屏蔽字，加1标点或2空格不会屏蔽）
 共匪
 教主
 黑帮
@@ -935,6 +937,7 @@ AR突击步枪
 阻击枪
 释迦牟尼
 王八蛋
+王8蛋
 厕所偷
 红星
 狼人
@@ -956,17 +959,19 @@ AR突击步枪
 援交
 政变
 艾滋病
+六十（1字符屏蔽字，加2空格或2标点不会屏蔽，与之相似读音的词语都会被屏蔽，例如流失、流逝、六师、刘氏、柳市、刘师、流式、六世、六石、刘石、刘诗、六试）
 热那亚
 苏联解体
 民国
 道教
-Liusi（空格屏蔽）
+Liusi（liusi中间1字符屏蔽，加2空格或2标点或不会屏蔽）
 五月
-五月三十五号（五月中间打一个空格也会被全屏蔽）
+五月三十五号（五月中间打1字符也会被全屏蔽，加2空格或2标点或不会屏蔽）
 混蛋
 代孕
 反社会
 反人类
+抗日
 安非他命
 蟒
 乙醚
@@ -986,23 +991,106 @@ Tnt
 基督教
 伊斯兰
 林肯
+八路
 法西斯
 文化大革命
 黑鬼
 穆斯林
+18（十八）禁
+瓜娃子
+肉便器
+Anal
+小番（禁言字）
 冰毒
 柏林墙
+外交部
+自由亚洲电台
+亚洲	
+Sf
+倒退
+狂妄
 最大限度
+破网
+地藏
+巡查
+护法
+唐宋
+苏辙
+曾巩
+司马光
+奥运门票
+暗语
+习大大
+习大佬
+开国大典
+共产主义
+一国两制
+民运
+烈士
+邓朴方
+不要嫉妒
+封建
+走资派
+阿弥陀佛
+菩提
+贱卖
+毛主席
+中共中央文件
+卡拉什尼科夫
+格洛克
+己方
+5u
+发情
+赛马
+赌马
+宏伟
+特朗普
+Rape
+肉丝
+黑丝
+白丝
+暴力执法
+提炼
+毂
+活動
+剑仙
+吴广
+隋炀
+都江堰
+暴君
+紫金山
+看下
+北朝鲜
+泷泽萝拉
+小泽玛利亚
+苍井空
+波多野结衣
+吉泽明步
+欧美
+斗地主
+国籍
+河蟹
+专政
+麻衣
+波多野结衣屏蔽车牌：（@juy @miae@rbd@xvsr@IESP@NASS@WANZ@MBYD@IENE@PGD@NATR@MIBD@JUX@EMBU@BEB@VAGU@MIAD@MDYD@CXAZ@GWAZ@NNPJ@VENU@HITMA@ODFR@QEDR@VEC@CAGJ@MRSS@GXAZ@DYNC@MDOG@AMRC@EYAN@ADN）
+吉泽明步屏蔽车牌（@SNIS）
+其他车牌：（@miaa@soe@jufd@IPZ6 @EBOD6 @VRTM6 @MIDE8）
+@docp（COS）
 特殊符号：&ㄨ㊣㈡㈢㈣㈥㈧㈨㈩㎎㎏㎜
 汉语注音符号：ㄅㄆㄇㄈㄉㄊㄋㄌㄍㄎㄏㄐㄑㄒㄓㄔㄕㄖㄗㄘㄙㄚㄛㄜㄝㄞㄟㄠㄡㄢㄣㄤㄥㄦㄧㄨㄩ
 部首偏旁：凵卩阝艹彐丬隹
+文件后缀名：dao，Rfa
+
 注：①键盘上除了_是二次确认屏蔽字，标点符号与网络特殊符号对改名都是直接屏蔽字
-②部分政治人物的拼音也会屏蔽，除了一些特殊人物（如特朗普，拜登，勃列日涅夫，戈尔巴乔夫，叶利钦））
+②部分政治人物的拼音也会屏蔽，除了一些特殊人物（如拜登，勃列日涅夫，戈尔巴乔夫，叶利钦））
 ③大舰队界面无法打出屏蔽字只能在主界面切换频道打出来，还是星号
 ④“手榴弹枪，人民解放军，如来佛祖”没有优先屏蔽，因为手榴弹与榴弹枪都会被屏蔽，堵门，其他例子如上
 ⑤所有字母不分大小写
 ⑥liusi是全拼音屏蔽所以读音字都发不出去
 ⑦绝大部分的政治与战争人物的英文不会被屏蔽如赫鲁晓夫华盛顿布什
 本拉登卡扎菲
+⑧部分屏蔽字可以在舰队频道打出来，例如路世，我以后会挨个进行集中检测
+⑨毛邓江（无线空格屏蔽字，中间加任何字符都会被屏蔽，甚至如果这三个按照任意数量任意排序，中间插入任何字符，汉子或者空格，都有概率全部屏蔽，但后面不一定屏蔽，“毛，邓”这类情况不会被屏蔽，“毛毛毛，邓邓邓，江江江”时，标点符号会存活，字会屏蔽，毛邓江在舰队频道以任何形式存在，不会被屏蔽）
+⑩关于车牌号：例如miaa后面加任何数字都会被屏蔽，在miaa与数字中间加任何字符也会被屏蔽，无限字符屏蔽字，车牌无限字符屏蔽字标记：@，如@miaa，经验证，名优的车牌多半被屏蔽
 </body>
 </html>
