--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 body
 {
 	background-color: #D6EAF8
+	font-size: 20px
+	color: #1D8348
 }
-body{font-size: 20px}
-body{color: #1D8348}
 </style>
 <body>
 <p align="center"><a href="/屏蔽字.docx" download="屏蔽字">点击下载</a><br/></p>
